kubernetes/production/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kazoo
  labels:
    app: kazoo
    project: telephoneorg
    environment: production
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: kazoo
        project: telephoneorg
        environment: production
    spec:
      containers:
      - name: kazoo
        image: telephoneorg/kazoo:latest
        imagePullPolicy: Always
        ports:
        - name: crossbar
          containerPort: 8000
        - name: ws-tcp
          containerPort: 5555
        - name: ws-udp
          protocol: UDP
          containerPort: 5555
        - name: fax-smtp
          containerPort: 19025
        - name: media-proxy
          containerPort: 24517
        volumeMounts:
        - name: config
          mountPath: /config
        - name: sounds
          mountPath: /opt/kazoo/media/prompts
        - name: monster-ui
          mountPath: /var/www/html/monster-ui
        resources:
          requests:
            cpu: 3
            memory: 3Gi
          limits:
            cpu: 3
            memory: 3Gi
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 1200
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        securityContext:
          capabilities:
            add:
            - SYS_NICE
            - SYS_RESOURCE
      volumes:
      - name: templates
        configMap:
          name: kazoo-templates
      - name: config
        emptyDir: {}
      - name: sounds
        emptyDir: {}
      - name: monster-ui
        emptyDir: {}
      restartPolicy: Always
