kubernetes/production/kazoo-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kazoo
  labels:
    app: kazoo
    project: telephoneorg
    environment: production
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kazoo
        project: telephoneorg
        environment: production
    spec:
      containers:
      - name: kazoo
        image: telephoneorg/kazoo
        imagePullPolicy: Always
        ports:
        - name: crossbar
          containerPort: 8000
        - name: ws-tcp
          containerPort: 5555
        - name: ws-udp
          protocol: UDP
          containerPort: 5555
        - name: fax-smtp
          containerPort: 19025
        - name: media-proxy
          containerPort: 24517
        resources:
          requests:
            cpu: 2
            memory: 2Gi
          limits:
            cpu: 2
            memory: 2Gi
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 160
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 180
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
      restartPolicy: Always
