kubernetes/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kazoo
  labels:
    app: kazoo
    project: telephoneorg
    environment: production
spec:
  selector:
    app: kazoo
    project: telephoneorg
    environment: production
  ports:
  - name: crossbar
    protocol: TCP
    port: 8000
  - name: ws-tcp
    protocol: TCP
    port: 5555
  - name: ws-udp
    protocol: UDP
    port: 5555
  - name: fax-smtp
    protocol: TCP
    port: 19025
  - name: media-proxy
    protocol: TCP
    port: 24517
