kubernetes/production/ingress-api.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api.valuphone.com
  labels:
    app: kazoo
    project: telephoneorg
    environment: production
    provides: api
    domain: api.valuphone.com
  annotations:
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: 'nginx'
spec:
  tls:
  - hosts:
    - api.valuphone.com
    secretName: api.valuphone.com-tls
  rules:
  - host: api.valuphone.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kazoo
          servicePort: 8000
