kubernetes/production/ingress-ws.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ws.valuphone.com
  labels:
    app: kazoo
    project: telephoneorg
    environment: production
    provides: ui-websockets
    domain: ws.valuphone.com
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/proxy-send-timeout: 360s
    ingress.kubernetes.io/proxy-read-timeout: 360s
spec:
  rules:
  - host: ws.valuphone.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kazoo
          servicePort: 5555
