kubernetes/production/ingress-wss.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wss.valuphone.com
  annotations:
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: 'nginx'
    ingress.kubernetes.io/enable-cors: 'true'
    ingress.kubernetes.io/cors-allow-headers: DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,X-Auth-Token
  labels:
    app: kazoo
    project: telephoneorg
    environment: production
    provides: secure-websockets
    domain: wss.valuphone.com
spec:
  tls:
  - hosts:
    - wss.valuphone.com
    secretName: wss.valuphone.com-tls
  rules:
  - host: wss.valuphone.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kazoo
          servicePort: 5555
